syntax = "proto3";

package app.grpc.greeter;

option php_namespace = "App\\Grpc\\Greeter"; // Namespace PHP

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}